# audio_bt_mesh

./: .gitignore  LICENSE  README.md
esp/: CMakeLists.txt  b.sh  sdkconfig
esp/components/bsp/: CMakeLists.txt  board_bsp.c
esp/components/bsp/include/: board_bsp.h
esp/components/iot_button/: CMakeLists.txt  iot_button.c
esp/components/iot_button/include/: iot_button.h
esp/components/led_strip/: CMakeLists.txt  led_strip.c
esp/components/led_strip/include/: led_strip.h
esp/components/ptt_client_ctrl/: CMakeLists.txt  ptt_client_ctrl.c
esp/components/ptt_client_ctrl/include/: ptt_client_ctrl.h
esp/components/ptt_mesh_iface/: CMakeLists.txt  ptt_mesh_iface.c  ptt_mesh_iface_LEAD.c  ptt_mesh_iface_TEAM.c
esp/components/ptt_mesh_iface/include/: ptt_mesh_iface.h
esp/components/ptt_proto/include/: ptt_proto.h
esp/components/ptt_server_flood_ctrl/: CMakeLists.txt  ptt_server_flood_ctrl.c
esp/components/ptt_server_flood_ctrl/include/: gt_aud_mesh_prot.h  ptt_server_flood_ctrl.h
esp/components/ptt_server_iface/: CMakeLists.txt  ptt_server_iface.c
esp/components/ptt_server_iface/include/: ptt_server_iface.h
esp/components/ptt_vendor_model/: CMakeLists.txt  ptt_vendor_model.c
esp/components/ptt_vendor_model/include/: gt_aud_mesh_prot.h  ptt_vendor_model.h
esp/main/: CMakeLists.txt  app_common.c  app_config.h  app_lead.c  app_team.c  gt_aud_mesh_prot.h  main.c  ptt_app.c
